force-app/main/default/objects/Fencing_Club_Directory__c/Fencing_Club_Directory__c.object-meta.xml
<CustomObject>
    <label>Public Fencing Club</label>
    <nameField><displayFormat>SC-{00000}</displayFormat><label>Public Fencing Club Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Public Fencing Clubs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>