force-app/main/default/objects/Fencing_Club_Directory__c/fields/Active__c.field-meta.xml
<CustomField><fullName>Active__c</fullName><label>Active in Directory</label><defaultValue>false</defaultValue><type>Checkbox</type></CustomField>