force-app/main/default/objects/Fencing_Club_Directory__c/fields/Country__c.field-meta.xml
<CustomField><fullName>Country__c</fullName><label>Country</label><length>40</length><type>Text</type></CustomField>