force-app/main/default/objects/Fencing_Club_Directory__c/fields/Last_Synced_At__c.field-meta.xml
<CustomField><fullName>Last_Synced_At__c</fullName><label>Last Retrieved From Source</label><type>DateTime</type></CustomField>