force-app/main/default/objects/Fencing_Club_Directory__c/fields/Location__c.field-meta.xml
<CustomField><fullName>Location__c</fullName><label>Public Club Coordinates</label><displayLocationInDecimal>true</displayLocationInDecimal><scale>7</scale><type>Location</type></CustomField>