force-app/main/default/objects/Fencing_Club_Directory__c/fields/Para_Listed__c.field-meta.xml
<CustomField><fullName>Para_Listed__c</fullName><label>Para Listed</label><defaultValue>false</defaultValue><type>Checkbox</type></CustomField>