force-app/main/default/objects/Fencing_Club_Directory__c/fields/Postal_Code__c.field-meta.xml
<CustomField><fullName>Postal_Code__c</fullName><label>Postal Code</label><length>20</length><type>Text</type></CustomField>