force-app/main/default/objects/Fencing_Club_Directory__c/fields/Source_Id__c.field-meta.xml
<CustomField><fullName>Source_Id__c</fullName><label>USA Fencing ID</label><length>40</length><externalId>true</externalId><unique>true</unique><type>Text</type></CustomField>