force-app/main/default/objects/Fencing_Club_Directory__c/fields/Source_URL__c.field-meta.xml
<CustomField><fullName>Source_URL__c</fullName><label>Official Source URL</label><type>Url</type></CustomField>