force-app/main/default/objects/Fencing_Club_Directory__c/fields/State__c.field-meta.xml
<CustomField><fullName>State__c</fullName><label>State</label><length>40</length><type>Text</type></CustomField>