force-app/main/default/objects/Fencing_Club_Directory__c/fields/Street__c.field-meta.xml
<CustomField><fullName>Street__c</fullName><label>Public Street</label><length>255</length><type>Text</type></CustomField>