force-app/main/default/objects/Fencing_Club_Directory__c/fields/Weapons__c.field-meta.xml
<CustomField><fullName>Weapons__c</fullName><label>Listed Weapons</label><length>100</length><type>Text</type></CustomField>