force-app/main/default/objects/Fencing_Club_Directory__c/fields/Website__c.field-meta.xml
<CustomField><fullName>Website__c</fullName><label>Club Website</label><type>Url</type></CustomField>